# rook-on-chessboard

./: CMakeLists.txt  README.md  rook.cpp
